Kláraði Auglýsingu í verkefni3

--- a/verkefni3/index.html
+++ b/verkefni3/index.html
@@ -43,12 +43,13 @@
 		<aside class="haegri">
 			<a href ="https://tskoli.is/" class="ad" id="auglysing">
 				<img src="myndir/skoli_logo.jpg" class= admynd>
-				<h3 class="adtexti">
-					
-				</h3>
 				<div class="anim">
 					<div class="adbox">
-						
+						<p class=adtexti>
+							Gerðu þig tulbúinn fyrir atvinnu lífið með fjölbreytnu brautum tækniskólans.
+							Skoðaðu upplýsingar á heimasíðu tækniskólans
+							=><span class="fakelink">Smeltu Hér</span>
+						</p>
 					</div>
 				</div>
 			</a>
