gerði javascript og modal fyrir verkefni3(Þarf að fara betur yfir það)

--- a/verkefni3/index.html
+++ b/verkefni3/index.html
@@ -7,6 +7,7 @@
 	<title>Verkefni 2</title>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/verkefni2.css">
+	<script src="scripts/verkefni3.js"></script>
 </head> 
 <body>
 
@@ -39,6 +40,13 @@
 			<p><a href="https://tympanus.net/codrops/css_reference/grid/">CSS grid</a></p>		
 			<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum euismod sodales lacus eu tempor. Maecenas eget felis vitae massa pharetra mattis non pellentesque dolor. Suspendisse potenti. Donec lorem risus, hendrerit id est id, efficitur elementum metus. Quisque hendrerit neque non ante interdum euismod. Proin ut nulla pretium, tempor sem at, gravida nisl. Suspendisse potenti. Donec lorem risus, hendrerit id est id, efficitur elementum metus. Quisque hendrerit neque non ante interdum euismod. Proin ut nulla pretium, tempor sem at, gravida nisl.
 			</p>
+			<button id="popup">Skráning</button>
+				<div id="popupbox" class="modal">
+					<div class="popupcontent">
+						<span class="Exit">&times;</span>
+						<p>Some text</p>
+					</div>
+				</div>
 		</article>
 		<aside class="haegri">
 			<a href ="https://tskoli.is/" class="ad" id="auglysing">
