Enþá að vinna með model

--- a/verkefni3/index.html
+++ b/verkefni3/index.html
@@ -42,8 +42,8 @@
 			</p>
 			<button id="popup">Skráning</button>
 				<div id="popupbox" class="modal">
-					<div class="popupcontent">
-						<span class="Exit">&times;</span>
+					<div id="popupcontent">
+						<span class="close">&times;</span>
 						<p>Some text</p>
 					</div>
 				</div>
