--- a/verkefni3/index.html
+++ b/verkefni3/index.html
@@ -7,7 +7,6 @@
 	<title>Verkefni 2</title>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/verkefni2.css">
-	<script src="scripts/verkefni3.js"></script>
 </head> 
 <body>
 
@@ -47,6 +46,19 @@
 						<p>Some text</p>
 					</div>
 				</div>
+		<script type="text/javascript">
+			document.getElementById("popup").onclick = function(){
+				document.getElementById("popupbox").style.display = "block";
+			}
+			document.getElementsByClassName("close")[0].onclick = function(){
+				document.getElementById("popupbox").style.display = "none";
+			}
+			window.onclick = function(event){
+				if (event.target == document.getElementById("popupbox")){
+					document.getElementById("popupbox").style.display = "none";
+				}
+			}
+		</script>
 		</article>
 		<aside class="haegri">
 			<a href ="https://tskoli.is/" class="ad" id="auglysing">
