Haldið ámfram var í sass verkefni

--- a/verkefni4/index.html
+++ b/verkefni4/index.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- þvingar farsíma vafra til að birta gögn 1:1 og þá virka viðmið (breakpoints) í stílsíðum -->
 	<meta charset="utf-8">
-	<title>Verkefni 3</title>
+	<title>Verkefni 4</title>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/verkefni2.css">
 </head> 
@@ -80,23 +80,23 @@
 		<p><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">Cascading Style Sheets </a>  (CSS) is a stylesheet language used to describe the presentation of a document written in HTML or XML (including XML dialects such as SVG or XHTML). CSS describes how elements should be rendered on screen, on paper, in speech, or on other media.</p>
 		<div class=smediabar>
 			<a href="" title="">
-				<div class="box_1 icon-facebook">
-					&#xe900;
+				<div class="box_1">
+					<span class="icon-facebook"></span>
 				</div>
 			</a>
 			<a href="" title="">
 				<div class="box_2">
-					Y
+					<span class="icon-Youtube"></span>
 				</div>
 			</a>
 			<a href="" title="">
 				<div class="box_3">
-					S
+					<span class="icon-snap"></span>
 				</div>
 			</a>
 			<a href="" title="">
 				<div class="box_4">
-					P
+					<span class="icon-pinterest"></span>
 				</div>
 			</a>
 		</div>
