--- a/Exercises-sass/Ch4/SASS_SampleDoc.html
+++ b/Exercises-sass/Ch4/SASS_SampleDoc.html
@@ -2,16 +2,18 @@
 <html lang="en">
     <head>
         <title>SASS Sample Document</title>
-        <link rel="stylesheet" href="" type="text/css">
+        <link rel="stylesheet" href="css/allstyles.css" type="text/css">
     </head>
 
     <body>
         <div id="pagecontent">
             <header>
                 <h1>SASS Sample Document</h1>
-                <h2>Heading 2</h2>
-                <h3>Heading 3</h3>
-                <h4>Heading 4</h4>
+                <section class="headers">
+                    <h2>Heading 2</h2>
+                    <h3>Heading 3</h3>
+                    <h4>Heading 4</h4>
+                </section>
             </header>
             <div>
                 <p id="mypara">Sample paragraph of text</p>
@@ -26,6 +28,7 @@
                 <li>List Item 5</li>
                 <li>List Item 6</li>
                 </ul>
+                <a href="#" class="link">Hello</a>
             </div>
             <footer>
                 <h3>This is some footer content</h3>
