--- a/Exercises-sass/Ch4/SASS_SampleDoc.html
+++ b/Exercises-sass/Ch4/SASS_SampleDoc.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>SASS Sample Document</title>
-        <link rel="stylesheet" href="" type="text/css">
+        <link rel="stylesheet" href="css/allstyles.css" type="text/css">
     </head>
 
     <body>
@@ -13,22 +13,25 @@
                 <h3>Heading 3</h3>
                 <h4>Heading 4</h4>
             </header>
-            <div>
-                <p id="mypara">Sample paragraph of text</p>
-                <p>Another paragraph of text</p>
-            </div>
-            <div>
-                <ul id="list1">
-                <li>List Item 1</li>
-                <li>List Item 2</li>
-                <li>List Item 3</li>
-                <li>List Item 4</li>
-                <li>List Item 5</li>
-                <li>List Item 6</li>
-                </ul>
-            </div>
+            <section class="main-content">
+                <div>
+                    <p id="mypara">Sample paragraph of text</p>
+                    <p>Another paragraph of text</p>
+                </div>
+                <div>
+                    <ul id="list1">
+                    <li>List Item 1</li>
+                    <li>List Item 2</li>
+                    <li>List Item 3</li>
+                    <li>List Item 4</li>
+                    <li>List Item 5</li>
+                    <li>List Item 6</li>
+                    </ul>
+                </div>
+            </section>
             <footer>
-                <h3>This is some footer content</h3>
+                <span>This is some footer content</span>
+                <a href="#" class="link">Hello</a>
             </footer>
         </div>
     </body>
